--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="style.css" rel="stylesheet">
-  <title>Minion Transalte</title>
+  <title>Minion Translate</title>
 </head>
 
 <body>
   <nav>
     <div class="header-title">
-      Minion Transalate
+      Minion Translate
     </div>
   </nav>
   <div class="main">
@@ -21,7 +21,7 @@
     <textarea name="city-name" id="txt-input"></textarea>
   <br>
   <button id="btn-data">
-    Transalte
+    Translate
   </button>
   <br>
   <div class="weather">
